@@ -1,3 +1,9 @@
+2011-12-07 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFArray.c: Cleaned up CFArrayReplaceValue() and had 
+	other functions call it to insert, remove, etc.
+	* Source/CFNumber.c: Added description function.
+
 2011-12-06 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/objc_interface.h:
